name:                hoggl
version:             0.1.0.0
license:             BSD3
license-file:        LICENSE
author:              Markus Hauck
maintainer:          markus1189@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:       -Wall
  exposed-modules:     Network.Hoggl
                     , Network.Hoggl.Types
  other-extensions:    DataKinds
                     , GeneralizedNewtypeDeriving
                     , OverloadedStrings
                     , TypeOperators
  build-depends:       aeson
                     , base >=4.8 && <4.9
                     , base64-string
                     , either
                     , formatting
                     , servant
                     , servant-client
                     , text
                     , time
                     , transformers

  hs-source-dirs:      src
  default-language:    Haskell2010

executable hoggl
  main-is:             Main.hs
  hs-source-dirs:      main
  build-depends:       base >= 4 && < 5
                     , either
                     , hoggl
                     , optparse-applicative
                     , text
                     , time
  default-language:    Haskell2010