name:                hoggl
version:             0.2.0.0
license:             BSD3
license-file:        LICENSE
author:              Markus Hauck
maintainer:          markus1189@gmail.com
category:            Network
build-type:          Simple
cabal-version:       >=1.10

library
  ghc-options:       -Wall
  exposed-modules:     Network.Hoggl
                     , Network.Hoggl.Types
                     , Network.Hoggl.Pretty
  other-extensions:    DataKinds
                     , GeneralizedNewtypeDeriving
                     , OverloadedStrings
                     , TypeOperators
  build-depends:       aeson
                     , base >=4.9 && < 5
                     , base64-string
                     , either
                     , formatting
                     , http-client < 0.6
                     , http-client-tls
                     , mtl
                     , servant >= 0.9
                     , servant-client >= 0.9
                     , text
                     , time
                     , transformers
                     , unordered-containers

  hs-source-dirs:      src
  default-language:    Haskell2010

executable hoggl
  main-is:             Main.hs
  hs-source-dirs:      main
  build-depends:       base >= 4 && < 5
                     , either
                     , hoggl
                     , http-client
                     , http-client-tls
                     , optparse-applicative
                     , servant-client
                     , text
                     , time
                     , transformers
  default-language:    Haskell2010
